retrieveUnpackaged/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Addition_of_Workflow_Requirement__c</fullName>
        <description>Additional workflow requirement, i.e., addition of workflow to a heretofore fill and print form.</description>
        <inlineHelpText>Additional workflow requirement, i.e., addition of workflow to a heretofore fill and print form.</inlineHelpText>
        <label>Addition of Workflow Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0: Not Required</fullName>
                </value>
                <value>
                    <fullName>1: Desired if no cost to owner</fullName>
                </value>
                <value>
                    <fullName>2: Required and owner willing to pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Board_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Board Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications (Board Member)</relationshipLabel>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Availability_Comments__c</fullName>
        <inlineHelpText>Please provide additional requirements for data availability</inlineHelpText>
        <label>Data Availability Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Availability_External_Requirement__c</fullName>
        <description>Does the data need to be exported or integrated into another system? Is searching, bulk upload, etc. required?</description>
        <inlineHelpText>Does the data need to be exported or integrated into another system? Is searching, bulk upload, etc. required?</inlineHelpText>
        <label>Data Availability External Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0: Not Required</fullName>
                </value>
                <value>
                    <fullName>1: Desired if no cost to owner</fullName>
                </value>
                <value>
                    <fullName>2: Required and owner willing to pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Electronic_Signature_Requirement__c</fullName>
        <description>Electronic signature requirement.</description>
        <inlineHelpText>Electronic signature requirement.</inlineHelpText>
        <label>Electronic Signature Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0: Not Required</fullName>
                </value>
                <value>
                    <fullName>1: Desired if no cost to owner</fullName>
                </value>
                <value>
                    <fullName>2: Required and owner willing to pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FY_16_Usage__c</fullName>
        <label>FY 16 Usage Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FY_17_Usage_Count__c</fullName>
        <label>FY 17 Usage Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Number__c</fullName>
        <label>Form Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Users__c</fullName>
        <label>Full Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Highly_Formatted_Input_Requirement__c</fullName>
        <description>Highly formatted data entry requirement.</description>
        <inlineHelpText>Highly formatted data entry requirement.</inlineHelpText>
        <label>Highly Formatted Input Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0: Not required</fullName>
                </value>
                <value>
                    <fullName>1: Desired if no cost to owner</fullName>
                </value>
                <value>
                    <fullName>2: Required and owner is willing to pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highly_Formatted_Output_Requirement__c</fullName>
        <description>Print to .pdf in exactly the same layout of the form?</description>
        <inlineHelpText>Print to .pdf in exactly the same layout of the form?</inlineHelpText>
        <label>Highly Formatted Output Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0: Not Required</fullName>
                </value>
                <value>
                    <fullName>1: Desired if no cost to owner</fullName>
                </value>
                <value>
                    <fullName>2: Required and owner willing to pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_Priority__c</fullName>
        <label>Migration Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1: High Priority - Will Definitely Migrate</fullName>
                </value>
                <value>
                    <fullName>2: Medium Priority - Will Probably Migrate</fullName>
                </value>
                <value>
                    <fullName>3: Low Priority - Probably Will Not Migrate</fullName>
                </value>
                <value>
                    <fullName>0: Not a Priority - Will Not Migrate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_Status__c</fullName>
        <label>Migration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BAP Workflow Under Development</fullName>
                </value>
                <value>
                    <fullName>BAP Workflow Planned</fullName>
                </value>
                <value>
                    <fullName>BAP Downloadable Planned</fullName>
                </value>
                <value>
                    <fullName>FormSmart Downloadable Planned</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Do Not Migrate</fullName>
                </value>
                <value>
                    <fullName>Known</fullName>
                </value>
                <value>
                    <fullName>Orphan</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications (Office)</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter in primary contact. Additional contacts may be added in the application contacts related list</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Org</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Object_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sandbox_Name__c</fullName>
        <inlineHelpText>Enter in the name of the Sandbox that was granted for the prospect application</inlineHelpText>
        <label>Sandbox Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Form_Number__c</fullName>
        <label>Standard Form Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starter_Users__c</fullName>
        <label>Starter Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Narrative__c</fullName>
        <label>Status Narrative</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Candidate</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>In Production</fullName>
                </value>
                <value>
                    <fullName>Deferred/Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Users__c</fullName>
        <formula>Type_1_Users__c + Starter_Users__c + Full_Users__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_1_Users__c</fullName>
        <label>Type 1 Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Workflow</fullName>
                </value>
                <value>
                    <fullName>Fill and Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Form_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Notes__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Applications</fullName>
        <columns>NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Responsible_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Application__c.Candidate_Application</value>
        </filters>
        <label>Applications</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <recordTypes>
        <fullName>Candidate_Application</fullName>
        <active>true</active>
        <label>Candidate Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Forms</fullName>
        <active>true</active>
        <label>Form</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Data_Availability_Comments_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR (
IsPickVal( Data_Availability_External_Requirement__c, &apos;1: Desired if no cost to owner&apos;),
IsPickVal( Data_Availability_External_Requirement__c,&apos;2: Required and owner willing to pay&apos;)),
IsBlank(Data_Availability_Comments__c)
)</errorConditionFormula>
        <errorDisplayField>Data_Availability_Comments__c</errorDisplayField>
        <errorMessage>Please provide additional requirements for data availability when selected as desired or required.</errorMessage>
    </validationRules>
</CustomObject>